# Shesh-Besh_Game

./: CMakeLists.txt
include/: CMakeLists.txt  Character.h  Checker.h  Dice.h  Macros.h  Manager.h  Move.h  Music.h  Opponent.h  Player.h  Point.h  Textures.h
resources/: CMakeLists.txt
src/: CMakeLists.txt  Character.cpp  Checker.cpp  Dice.cpp  Manager.cpp  Move.cpp  Music.cpp  Opponent.cpp  Player.cpp  Point.cpp  Textures.cpp  main.cpp
